@@ -9,6 +9,11 @@ File: DESCRIPTION
 - Fixing the version requirement for "R.utils" (>= 1.32.1)
 - Introducing version requirement (>= 3.6) for suggested package "forecast"
 
+File: plotRings.R
+----------------
+
+- Notes an issue in the length.unit arg to the function given differently in the Rd file vs the R file. Made a quick fix. Also made a small adjustment to the axis limits as it seemed there was a lot of extra white space in the plot. Removed bty for the legend. Not sure if I understand the full rationale behind the way the function is written though. -AGB
+
 File: csv2rwl.R
 ----------------
 Adding new function to read csv files in as rwl objects. Also adding that capability into read.rwl. Mikko should see if the error checks etc pass muster.
